# simulator

./: .dockerignore  .gitignore  CHANGELOG.md  COMMERCIAL.md  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
deploy/: DEPLOYMENT.md
deploy/bathy-server/: Dockerfile  server.py
docs/superpowers/plans/: 2026-06-14-engine-core.md  2026-06-18-web-admin-ui.md  2026-06-20-navigable-geogrid-autorouting.md  2026-06-22-diagnostic-signal-modeling.md
docs/superpowers/specs/: 2026-06-14-engine-core-design.md  2026-06-18-web-admin-ui-design.md  2026-06-20-navigable-geogrid-autorouting-design.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  main.tsx
frontend/src/tabs/: ConfigTab.tsx  RouteMap.tsx  RouteTab.tsx  StatusStrip.tsx  StatusTab.tsx
src/yey/boats/simulator/: __init__.py  __main__.py  cli.py  config.py  control.py  resources.py  routeio.py
src/yey/boats/simulator/adapters/: __init__.py  failover.py
src/yey/boats/simulator/data/: adriatic.kmz  beneteau_o45.csv  marinas.json
src/yey/boats/simulator/engine/: ais_relay.py  autopilot.py  autoroute.py  command_listener.py  current.py  diagnostics.py  electrical.py  engine.py  faults.py  geogrid.py  hourmeter.py  lights.py  navigator.py  passage.py  performance.py  polars.py  route.py  runner.py  schedule.py  signalk_writer.py  snapshot.py  synthetic_ais.py  systems.py  temperatures.py  weather.py
src/yey/boats/simulator/ports/: __init__.py
src/yey/boats/simulator/sinks/: nmea0183.py  nmea2000.py  registry.py  signalk.py  stdout_json.py
src/yey/boats/simulator/sources/: ais.py  aisstream_source.py  open_meteo.py  signalk_command.py  signalk_weather.py  synthetic_ais_source.py
src/yey/boats/simulator/web/: api.py  server.py
src/yey/boats/simulator/web/static/: .gitkeep
tests/: test_ais_contact.py  test_ais_sources.py  test_autopilot.py  test_autopilot_delta.py  test_autoroute.py  test_cli.py  test_closest_approach.py  test_command_listener.py  test_config.py  test_config_file.py  test_config_weather_source.py  test_control.py  test_current.py  test_current_emission.py  test_diagnostic_emission.py  test_diagnostic_faults.py  test_driver_wiring.py  test_engine.py  test_failover.py  test_geogrid.py  test_geogrid_real.py  test_heading_wander.py  test_hourmeter.py  test_navigator_depth.py  test_navigator_override.py  test_nmea_stubs.py  test_open_meteo_source.py  test_passage.py  test_ports.py  test_ports_phase_c.py  test_registry.py  test_resources.py  test_route_depth.py  test_routeio.py  test_runner_snapshot.py  test_screen_value_emission.py  test_signalk_command_source.py  test_signalk_sink.py  test_signalk_weather_source.py  test_signalk_writer_connect.py  (+6 more)
tests/fixtures/: geogrid_hvar.json
