[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yey-boats-simulator"
version = "0.1.0"
description = "Adriatic sailing boat simulator: physics engine with pluggable SignalK / STDOUT / NMEA output sinks."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "Boris Sorochkin" }]
dependencies = [
    "numpy>=1.26",
    "httpx>=0.27",
    "lxml>=5.2",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "pytest-asyncio>=0.23", "ruff>=0.5"]

[project.scripts]
yey-boats-sim = "yey.boats.simulator.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/yey"]

[tool.hatch.build.targets.wheel.force-include]
"src/yey/boats/simulator/data" = "yey/boats/simulator/data"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

