[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yey-boats-simulator"
version = "0.1.0"
description = "Adriatic sailing boat simulator: physics engine with pluggable SignalK / STDOUT / NMEA output sinks."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "PolyForm-Noncommercial-1.0.0" }
authors = [{ name = "Boris Sorochkin" }]
dependencies = [
    "numpy>=1.26",
    "httpx>=0.27",
    "lxml>=5.2",
    "websockets>=12.0",
    "aiohttp>=3.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "pytest-asyncio>=0.23", "pytest-aiohttp>=1.0", "ruff>=0.5", "mypy>=1.10"]

[project.scripts]
yey-boats-sim = "yey.boats.simulator.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/yey"]

# The built SPA under web/static/ is VCS-ignored (it's a build artifact from
# frontend/). `artifacts` re-includes it in the wheel without force-include —
# which avoided "dir must exist on fresh checkout" AND the .gitkeep double-add
# collision (force-include + normal packaging both adding the tracked file).
[tool.hatch.build]
artifacts = ["src/yey/boats/simulator/web/static/**"]


[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "B", "UP", "SIM", "C4"]

# Non-strict start (SIM-3): the codebase has full type-hint coverage but was
# never checked. mypy_path/explicit_package_bases avoids "found twice under
# different module names" for the src/ layout (yey.boats.simulator is a real
# package under an implicit-namespace-package parent). Tighten (strict mode,
# fewer ignores) iteratively as surfaced errors get fixed.
[tool.mypy]
mypy_path = "src"
packages = ["yey.boats.simulator"]
explicit_package_bases = true
ignore_missing_imports = true
warn_unused_ignores = false

